--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "cross-env": "^5.1.1",
+    "cross-env": "^5.1.3",
     "jquery": "^3.2.1",
-    "laravel-mix": "^1.6.1",
+    "laravel-mix": "^1.7.2",
+    "marked": "^0.3.9",
     "node-sass": "^4.7.2",
     "scrollpoints": "^0.4.0",
-    "vue": "^2.5.8",
-    "vue-loader": "^13.5.0",
-    "vue-slick": "^1.1.12"
+    "vue": "^2.5.13",
+    "vue-loader": "^13.6.2",
+    "vue-slick": "^1.1.12",
+    "vue-template-compiler": "^2.5.13"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
